[BASE-69] bye bye TestNG  #resolve