@@ -19,21 +19,23 @@
  * enclosed by brackets [] replaced by your own identifying information:
  * "Portions Copyrighted [year] [name of copyright owner]"
  * ====================
+ * Portions Copyrighted 2018 ConnId
  */
 package org.identityconnectors.framework.common.objects;
 
-import static org.testng.Assert.assertNull;
-import static org.testng.Assert.assertEquals;
-import static org.testng.Assert.assertNotNull;
-import static org.testng.Assert.assertTrue;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
+import static org.junit.jupiter.api.Assertions.assertNull;
+import static org.junit.jupiter.api.Assertions.assertThrows;
 
-import org.testng.annotations.Test;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.HashMap;
+import java.util.Map;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
+import org.junit.jupiter.api.Test;
 
 public class AttributeDeltaBuilderTests {
 
@@ -59,7 +61,7 @@ public class AttributeDeltaBuilderTests {
         bld.addValueToReplace(false);
         AttributeDelta attrDelta3 = bld.build();
 
-        List<Object> expected = new ArrayList<Object>();
+        List<Object> expected = new ArrayList<>();
         expected.add(true);
         expected.add(false);
         assertEquals(attrDelta1.getValuesToReplace(), expected);
@@ -72,112 +74,122 @@ public class AttributeDeltaBuilderTests {
         assertEquals(attrDelta1, attrDelta1);
         assertNotNull(attrDelta1);
 
-        Set<AttributeDelta> set = new HashSet<AttributeDelta>();
+        Set<AttributeDelta> set = new HashSet<>();
         set.add(attrDelta1);
         set.add(attrDelta2);
         set.add(attrDelta3);
-        assertTrue(set.size() == 2);
+        assertEquals(2, set.size());
     }
 
-    @Test(expectedExceptions = IllegalArgumentException.class)
     public void uidFromBuilderInteger() {
-        AttributeDeltaBuilder.build(Uid.NAME, 1);
+        assertThrows(IllegalArgumentException.class, () -> {
+            AttributeDeltaBuilder.build(Uid.NAME, 1);
+        });
     }
 
-    @Test(expectedExceptions = IllegalArgumentException.class)
     public void uidFromBuilderLong() {
-        AttributeDeltaBuilder.build(Uid.NAME, 1L);
+        assertThrows(IllegalArgumentException.class, () -> {
+            AttributeDeltaBuilder.build(Uid.NAME, 1L);
+        });
     }
 
-    @Test(expectedExceptions = IllegalArgumentException.class)
     public void uidFromBuilderDouble() {
-        AttributeDeltaBuilder.build(Uid.NAME, 1.0);
+        assertThrows(IllegalArgumentException.class, () -> {
+            AttributeDeltaBuilder.build(Uid.NAME, 1.0);
+        });
     }
 
-    @Test(expectedExceptions = IllegalArgumentException.class)
     public void mapNullAttributeDelta() {
-        HashMap<Object, Object> map = new HashMap<Object, Object>();
-        map.put(null, "NOK");
+        assertThrows(IllegalArgumentException.class, () -> {
+            Map<Object, Object> map = new HashMap<>();
+            map.put(null, "NOK");
 
-        AttributeDeltaBuilder.build("map", map);
+            AttributeDeltaBuilder.build("map", map);
+        });
     }
 
-    @Test(expectedExceptions = IllegalArgumentException.class)
     public void mapIntegerAttributeDelta() {
-        HashMap<Object, Object> map = new HashMap<Object, Object>();
-        map.put(1, "NOK");
+        assertThrows(IllegalArgumentException.class, () -> {
+            Map<Object, Object> map = new HashMap<>();
+            map.put(1, "NOK");
 
-        AttributeDeltaBuilder bld = new AttributeDeltaBuilder();
-        bld.addValueToReplace(map);
+            AttributeDeltaBuilder bld = new AttributeDeltaBuilder();
+            bld.addValueToReplace(map);
+        });
     }
 
-    @Test(expectedExceptions = IllegalArgumentException.class)
     @SuppressWarnings("unchecked")
     public void mapShortAttributeDelta() {
-        HashMap<Object, Object> map1 = new HashMap<Object, Object>();
-        map1.put("string", "NOK");
+        assertThrows(IllegalArgumentException.class, () -> {
+            Map<Object, Object> map1 = new HashMap<>();
+            map1.put("string", "NOK");
 
-        HashMap<Object, Object> map2 = new HashMap<Object, Object>();
-        map2.put("map1", map1);
-        map2.put("list", Arrays.asList(1, 2, 3, new Short("5")));
+            Map<Object, Object> map2 = new HashMap<>();
+            map2.put("map1", map1);
+            map2.put("list", Arrays.asList(1, 2, 3, Short.valueOf("5")));
 
-        HashMap<Object, Object> map3 = new HashMap<Object, Object>();
-        map3.put("map2", map2);
+            Map<Object, Object> map3 = new HashMap<>();
+            map3.put("map2", map2);
 
-        HashMap<Object, Object> map4 = new HashMap<Object, Object>();
-        map4.put("map3", map3);
+            Map<Object, Object> map4 = new HashMap<>();
+            map4.put("map3", map3);
 
-        AttributeDeltaBuilder.build("map", map4);
+            AttributeDeltaBuilder.build("map", map4);
+        });
     }
 
     @Test
     public void mapAttributeDelta() {
-        HashMap<Object, Object> map1 = new HashMap<Object, Object>();
+        Map<Object, Object> map1 = new HashMap<>();
         map1.put("string", "OK");
 
-        HashMap<Object, Object> map2 = new HashMap<Object, Object>();
+        Map<Object, Object> map2 = new HashMap<>();
         map2.put("map1", map1);
         map2.put("list", Arrays.asList(1, 2, 3));
 
-        HashMap<Object, Object> map3 = new HashMap<Object, Object>();
+        Map<Object, Object> map3 = new HashMap<>();
         map3.put("map2", map2);
 
-        HashMap<Object, Object> map4 = new HashMap<Object, Object>();
+        Map<Object, Object> map4 = new HashMap<>();
         map4.put("map3", map3);
 
         AttributeDeltaBuilder.build("map", map4);
     }
 
-    @Test(expectedExceptions = IllegalArgumentException.class)
     public void conflictReplaceAndAddValues() {
-        AttributeDeltaBuilder attrDelta1 = new AttributeDeltaBuilder();
-        attrDelta1.setName("test");
-        attrDelta1.addValueToReplace("jgs");
-        attrDelta1.addValueToAdd("fda");
+        assertThrows(IllegalArgumentException.class, () -> {
+            AttributeDeltaBuilder attrDelta1 = new AttributeDeltaBuilder();
+            attrDelta1.setName("test");
+            attrDelta1.addValueToReplace("jgs");
+            attrDelta1.addValueToAdd("fda");
+        });
     }
 
-    @Test(expectedExceptions = IllegalArgumentException.class)
     public void conflictReplaceAndRemoveValues() {
-        AttributeDeltaBuilder attrDelta1 = new AttributeDeltaBuilder();
-        attrDelta1.setName("test");
-        attrDelta1.addValueToReplace("jgs");
-        attrDelta1.addValueToRemove("fda");
+        assertThrows(IllegalArgumentException.class, () -> {
+            AttributeDeltaBuilder attrDelta1 = new AttributeDeltaBuilder();
+            attrDelta1.setName("test");
+            attrDelta1.addValueToReplace("jgs");
+            attrDelta1.addValueToRemove("fda");
+        });
     }
 
-    @Test(expectedExceptions = IllegalArgumentException.class)
     public void conflictAddAndReplaceValues() {
-        AttributeDeltaBuilder attrDelta1 = new AttributeDeltaBuilder();
-        attrDelta1.setName("test");
-        attrDelta1.addValueToAdd("fda");
-        attrDelta1.addValueToReplace("jgs");
+        assertThrows(IllegalArgumentException.class, () -> {
+            AttributeDeltaBuilder attrDelta1 = new AttributeDeltaBuilder();
+            attrDelta1.setName("test");
+            attrDelta1.addValueToAdd("fda");
+            attrDelta1.addValueToReplace("jgs");
+        });
     }
 
-    @Test(expectedExceptions = IllegalArgumentException.class)
     public void conflictRemoveAndReplaceValues() {
-        AttributeDeltaBuilder attrDelta1 = new AttributeDeltaBuilder();
-        attrDelta1.setName("test");
-        attrDelta1.addValueToRemove("fda");
-        attrDelta1.addValueToReplace("jgs");
+        assertThrows(IllegalArgumentException.class, () -> {
+            AttributeDeltaBuilder attrDelta1 = new AttributeDeltaBuilder();
+            attrDelta1.setName("test");
+            attrDelta1.addValueToRemove("fda");
+            attrDelta1.addValueToReplace("jgs");
+        });
     }
 
     @Test
